// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/maven/index collects releases from all registry urls 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc123",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://custom.registry.renovatebot.com/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc123",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/3.0.0/package-3.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc123",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://custom.registry.renovatebot.com/org/example/package/3.0.0/package-3.0.0.pom",
  },
]
`;

exports[`datasource/maven/index falls back to next registry url 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://repo.maven.apache.org/maven2",
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index falls back to next registry url 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "failed_repo",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://failed_repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "unauthorized_repo",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://unauthorized_repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "empty_repo",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://empty_repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "unknown_error",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://unknown_error/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`datasource/maven/index fetching parent info should be able to detect git://@github.com/child-scm as valid sourceUrl 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`datasource/maven/index fetching parent info should be able to detect git@github.com/child-scm as valid sourceUrl 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`datasource/maven/index fetching parent info should be able to detect git@github.com:child-scm as valid sourceUrl 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`datasource/maven/index fetching parent info should get homepage and source from own pom 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`datasource/maven/index fetching parent info should get homepage from own pom and source from parent 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/parent/1.0.0/parent-1.0.0.pom",
  },
]
`;

exports[`datasource/maven/index fetching parent info should get source and homepage from parent 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/parent/1.0.0/parent-1.0.0.pom",
  },
]
`;

exports[`datasource/maven/index fetching parent info should get source from own pom and homepage from parent 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/parent/1.0.0/parent-1.0.0.pom",
  },
]
`;

exports[`datasource/maven/index handles optional slash at the end of registry url 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`datasource/maven/index ignores unsupported protocols 1`] = `
Array [
  Object {
    "releaseTimestamp": "2020-01-01T01:00:00.000Z",
    "version": "1.0.0",
  },
  Object {
    "releaseTimestamp": "2020-01-01T02:00:00.000Z",
    "version": "2.0.0",
  },
]
`;

exports[`datasource/maven/index ignores unsupported protocols 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "http://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "http://repo.maven.apache.org/maven2/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "http://repo.maven.apache.org/maven2/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "http://repo.maven.apache.org/maven2/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "http://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "http://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`datasource/maven/index removes authentication header after redirect 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://frontend_for_private_s3_repository/maven2",
  "releases": Array [
    Object {
      "version": "1.0.0",
    },
    Object {
      "version": "1.0.1",
    },
    Object {
      "version": "1.0.2",
    },
    Object {
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index removes authentication header after redirect 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dXNlcm5hbWU6cGFzc3dvcmQ=",
      "host": "frontend_for_private_s3_repository",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://frontend_for_private_s3_repository/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "private_s3_repository",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://private_s3_repository/maven2/org/example/package/maven-metadata.xml?X-Amz-Algorithm=AWS4-HMAC-SHA256",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dXNlcm5hbWU6cGFzc3dvcmQ=",
      "host": "frontend_for_private_s3_repository",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://frontend_for_private_s3_repository/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "private_s3_repository",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://private_s3_repository/maven2/org/example/package/2.0.0/package-2.0.0.pom?X-Amz-Algorithm=AWS4-HMAC-SHA256",
  },
]
`;

exports[`datasource/maven/index returns null when metadata is not found 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
]
`;

exports[`datasource/maven/index returns releases 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://repo.maven.apache.org/maven2",
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index returns releases 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`datasource/maven/index returns releases from custom repository 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://custom.registry.renovatebot.com",
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index returns releases from custom repository 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc123",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://custom.registry.renovatebot.com/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc123",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc123",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc123",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc123",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer abc123",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://custom.registry.renovatebot.com/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`datasource/maven/index skips registry with invalid XML 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://repo.maven.apache.org/maven2",
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index skips registry with invalid XML 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "invalid_metadata_repo",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://invalid_metadata_repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`datasource/maven/index skips registry with invalid metadata structure 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://repo.maven.apache.org/maven2",
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index skips registry with invalid metadata structure 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "invalid_metadata_repo",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://invalid_metadata_repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "HEAD",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`datasource/maven/index supports file protocol 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "file:///bar",
  "releases": Array [
    Object {
      "version": "1.0.0",
    },
    Object {
      "version": "1.0.1",
    },
    Object {
      "version": "1.0.2",
    },
    Object {
      "version": "2.0.0",
    },
  ],
}
`;

exports[`datasource/maven/index supports file protocol 2`] = `
Array [
  Array [
    "/bar/org/example/package/maven-metadata.xml",
    "utf8",
  ],
  Array [
    "/bar/org/example/package/2.0.0/package-2.0.0.pom",
    "utf8",
  ],
]
`;

exports[`datasource/maven/index throws EXTERNAL_HOST_ERROR for 50x 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "repo.maven.apache.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://repo.maven.apache.org/maven2/org/example/package/maven-metadata.xml",
  },
]
`;
